# systemd-glib

./: meson.build
src/: meson.build  systemd-job-iface.vala  systemd-manager-iface.vala  systemd-scope-iface.vala  systemd-snapshot-iface.vala  systemd-unit-iface.vala
